alx-backend-python/messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django
      version: blue
  template:
    metadata:
      labels:
        app: django
        version: blue
    spec:
      containers:
        - name: django
          image: your_dockerhub_username/messaging_app:1.0
          ports:
            - containerPort: 8000
image: your_dockerhub_username/messaging_app:2.0
