alx-backend-python/messaging_app/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django
      version: green
  template:
    metadata:
      labels:
        app: django
        version: green
    spec:
      containers:
        - name: django
          image: your_dockerhub_username/messaging_app:1.1
          ports:
            - containerPort: 8000
